# FileExplorer

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  readme.md
sources/: main.cpp
sources/app/: application.cpp  application.hpp  display.cpp  display.hpp  explorer.cpp  explorer.hpp  explorer_settings.cpp  explorer_settings.hpp  filesystem.cpp  filesystem.hpp  folder_navigator.cpp  folder_navigator.hpp  window.cpp  window.hpp
sources/tools/: array2D.hpp  array2D.tpp  assertion.cpp  clock.cpp  clock.hpp  singleton.hpp  stream.hpp  string.cpp  string.hpp  traces.cpp  vector.hpp  vector.tpp  vector2D.hpp  vector2D.tpp
submodules/glad/: glad.c  glad.h
submodules/include/imgui/: imgui_impl_sdl2.h
